@@ -1,4 +1,13 @@
-2010-02-17  Dominique Dumont  <domi.dumont@free.fr> v 0.643
+2010-02-23  Dominique Dumont  <dominique.dumont@hp.com>  v0.643
+
+	* lib/Config/Model/DumpAsData.pm (dump_as_data): Can't dump
+	ordered hash in hash ref with __order key to specify order of hash
+	elements
+
+	* lib/Config/Model/HashId.pm (load_data): Accept hash ref with
+	__order to load ordered data
+
+2010-02-17  Dominique Dumont  <domi.dumont@free.fr>
 
 	* lib/Config/Model/AnyId.pm: For better clarity, Hash and List
 	parameter max and min are changed to max_index and
